# Siltr-Chat

./: .replit  Pasted--home-runner-TornadoChatRoom-app-py-318-LegacyAPIWarning-The-Query-get-method-is-considered-lega-1733880373011.txt  Pasted--home-runner-TornadoChatRoom-app-py-43-LegacyAPIWarning-The-Query-get-method-is-considered-legac-1733876935090.txt  Pasted-2024-12-10-14-19-06-22-6e31f8a5-User-INFO-werkzeug-127-0-0-1-10-Dec-2024-20-19-06-GET-log-1733996778078.txt  Pasted-2024-12-12-03-07-10-762-INFO-Flask-app-initialized-in-home-runner-TornadoChatRoom-app-py-35-202-1733972907074.txt  Pasted-2024-12-12-07-42-22-838-INFO-Flask-app-initialized-in-home-runner-TornadoChatRoom-app-py-35-202-1733989604364.txt  Pasted-ArgumentError-sqlalchemy-exc-ArgumentError-Error-creating-backref-roles-on-relationship-Role-pe-1733801818581.txt  Pasted-ERROR-app-Exception-on-login-POST-Traceback-most-recent-call-last-File-home-runner-Torna-1733874633700.txt  Pasted-ERROR-app-Exception-on-login-POST-Traceback-most-recent-call-last-File-home-runner-Torna-1733887246550.txt  Pasted-ERROR-app-Exception-on-login-POST-Traceback-most-recent-call-last-File-home-runner-Torna-1733888440664.txt  Pasted-Failed-to-load-resource-the-server-responded-with-a-status-of-404-Not-Found-default-avatar-png-1--1733980066959.txt  Pasted-INFO-extensions-All-Flask-extensions-initialized-successfully-INFO-werkzeug-Restarting-with-stat--1733931367639.txt  Pasted-INFO-extensions-All-extensions-initialized-successfully-INFO-main-Database-initialized-successfu-1734021124571.txt  Pasted-ProgrammingError-sqlalchemy-exc-ProgrammingError-psycopg2-errors-UndefinedColumn-column-user-ema-1733801257840.txt  Pasted-ProgrammingError-sqlalchemy-exc-ProgrammingError-psycopg2-errors-UndefinedColumn-column-user-is-v-1733939774145.txt  Pasted-ProgrammingError-sqlalchemy-exc-ProgrammingError-psycopg2-errors-UndefinedColumn-column-user-last-1733936238035.txt  app.py  (+12 more)
(+79 files in other folders)
