[project]
name = "repl-nix-tornadochatroom"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-socketio>=5.3.6",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy",
    "flask-migrate>=4.0.7",
    "python-dotenv>=1.0.1",
    "werkzeug>=3.1.3",
    "pydub>=0.25.1",
    "sounddevice>=0.5.1",
    "flask-login>=0.6.3",
    "flask-bcrypt>=1.0.1",
    "flask-mail>=0.10.0",
    "itsdangerous",
    "cryptography>=44.0.0",
    "black>=24.10.0",
    "gevent>=23.9.1",
    "eventlet>=0.33.3",
]
