[project]
name = "repl-nix-tornadochatroom"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask==2.3.3",
    "flask-socketio>=5.4.1",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy",
    "flask-migrate>=4.0.7",
    "python-dotenv>=1.0.1",
    "werkzeug==2.3.7",
    "pydub>=0.25.1",
    "sounddevice>=0.5.1",
    "flask-login",
    "flask-bcrypt",
    "flask-mail>=0.10.0",
    "itsdangerous",
    "eventlet>=0.38.1",
    "gevent>=24.11.1",
    "gevent-websocket>=0.10.1",
    "alembic>=1.14.0",
]
